:sparkles: added swagger api annotations
